<?xml version="1.0" encoding="utf-8"?><!--디폴트는 한국어-->
<resources>
    <string name="app_name">ALARM</string>
    <string name="기본설정">기본 설정</string>
    <string name="푸시알림띄우기">알람 생성 알림 띄우기</string>
    <string name="푸시알림띄우기_설명">알람을 설정하지 않은 경우,\n동일한 시간에 알람 생성을 위한 푸시 알림을 보냅니다.</string>
    <string name="푸시알림시간">알람 생성 알림 시간 지정하기</string>
    <string name="알람기본값설정">알람 기본값 설정하기</string>
    <string name="알람기본값설정_설명">알람을 설정하지 않은 경우,\n 기본값으로 울릴 알람을 설정합니다.</string>
    <string name="알람기본값시간">기본값 알람 시간 지정하기</string>

    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="내일의목표">내일의 목표</string>
    <string name="할일추가">이 곳에 내일 할 일을 추가하세요!</string>
    <string name="할일추가제한">최대 7개까지만 작성할 수 있습니다</string>
    <string name="설정완료">설정완료</string>
    <string name="설정완료알림">안녕히 주무세요!</string>
    <string name="기상디폴트">기상시간 입니다!</string>
    <string name="목표기록장">목표 기록장</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->
    <string name="빈_투두">기상시간 입니다!</string>
    <!-- Sync Preferences -->

    <string name="설정">설정</string>
    <string name="소리설정">소리설정</string>
    <string name="진동">진동</string>
    <string name="진동설명">알람과 함께 진동이 울립니다.</string>
    <string name="저장된벨소리">저장된 벨소리 리스트</string>
    <string name="선택된벨소리">선택된벨소리</string>

    <string name="언어설정">언어설정</string>
    <string name="선택된언어">선택된언어</string>
    <string name="한국어">한국어</string>

    <string name="화면설정">화면설정</string>
    <string name="라이트모드">라이트모드</string>
    <string name="자동모드">자동모드</string>
    <string name="다크모드">다크모드</string>
    <string name="window_permission_granted">알람 팝업을 표시하기 위해 다른 앱 위에 표시 권한이 필요합니다.</string>
    <string name="window_permission_denied">오버레이 권한을 허용해주세요.</string>


</resources>