<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentMain">

    <!-- TODO: 메인 화면 만들기 -->
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:gravity="center"
            android:text="@string/내일의목표"
            android:textSize="30dp"/>

        <com.example.ticker.core.ui.Ticker
            android:id="@+id/time_picker"
            android:layout_width="280dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:hoursFormat="hours12"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:minutesInterval="1"
            app:shouldAmSelected="false" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="50dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </CheckBox>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/할일추가"/>
                </TableRow>
                <TableRow>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </CheckBox>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/할일추가">

                    </EditText>
                </TableRow>
                <TableRow>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </CheckBox>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/할일추가">

                    </EditText>
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="130dp"
            android:text="@string/설정완료"
            android:textSize="20dp"
            android:background="@drawable/button_1">

        </Button>
    </LinearLayout>

</LinearLayout>