<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".InitAlram">

    <LinearLayout
        android:id="@+id/push_alarm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/backgroundresource"
            android:text="@string/기본설정"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/푸시알림띄우기"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/푸시알림띄우기_설명"
            android:textColor="#ffffff"
            android:textSize="15dp" />


        <Switch
            android:id="@+id/push_alarm_switch"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:switchPadding="50dp"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/selector_switch"
            android:switchMinWidth="50dp"
            />

        <TimePicker
            android:id="@+id/init_push_alarm_time_picker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_gravity="center_horizontal"
            android:timePickerMode="spinner"/>


    <LinearLayout
        android:id="@+id/push_alarm_check_toggle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:weightSum="4"
        android:orientation="vertical"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/푸시알림시간"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TimePicker
            android:id="@+id/push_alarm_time_picker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_gravity="center_horizontal"
            android:timePickerMode="spinner"/>
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="6"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/backbtn"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/circle" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/emptycircle" />
            </LinearLayout>

            <Button
                android:id="@+id/push_alarm_nextbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/nextbtn"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/repeat_alarm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/backgroundresource"
            android:text="@string/기본설정"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/알람기본값설정"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/알람기본값설정_설명"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <Switch
            android:id="@+id/repeat_alarm_switch"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:switchMinWidth="50dp"
            android:switchPadding="50dp"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/selector_switch" />

        <TimePicker
            android:id="@+id/init_push_alarm_time_picker_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_gravity="center_horizontal"
            android:timePickerMode="spinner"/>


    <LinearLayout
        android:id="@+id/repeat_alarm_check_toggle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:weightSum="4"
        android:orientation="vertical"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/알람기본값시간"
            android:textColor="#ffffff"
            android:textSize="20dp" />

        <TimePicker
            android:id="@+id/repeat_alarm_time_picker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3"
            android:timePickerMode="spinner" />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="6">


            <Button
                android:id="@+id/repeat_alarm_backbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/backbtn" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/circle" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:src="@drawable/circle" />
            </LinearLayout>

            <Button
                android:id="@+id/repeat_alarm_nextbutton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/nextbtn" />

        </LinearLayout>

    </LinearLayout>



</FrameLayout>